fix(styles): ensure app height is correct in IE
Previously, the app height in IE was too small and did not take up the
full available space. Providing a `min-height` is how Livestax ensures
the full space is used and this works in IE, so this is a more
appropriate way of making it work.

--- a/styles/main.less
+++ b/styles/main.less
@@ -49,7 +49,7 @@ html, body, .main-container {
   .flex(1);
   width: @app-width;
   border: 0;
-  max-height: 100%;
+  min-height: 100%;
 }
 
 .app-container {
